# ldrs_v3

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
agent/: __init__.py  agent_loop.py  config.py  embedder.py  fusion_ranker.py  grounding.py  indexer.py  intent_classifier.py  monitoring.py  pipeline.py  registry.py  retriever.py  tools.py  tree_grep.py  vfs.py  watcher.py
api/: __init__.py  server.py
pageindex/: __init__.py  config.yaml  utils.py
scripts/: check_dim.py  list_gemini_models.py  migrate_db_dimensions.py  test_agent_config.py  test_api.py  test_gemini.py  test_gemini_embedding.py
tests/: test_ldrs_v3.py
ui/: __init__.py  streamlit_app.py
